# todo

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  readme.md  tailwind.config.js
assets/: styles.css
src/: card.rs  list.rs  main.rs  storage.rs
src/components/: done_list.rs  mod.rs  todo_list.rs
