[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
leptos = { version = "0.4.3", features = ["hydrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.104"
uuid = { version = "1.4.1", features = ["wasm-bindgen", "v4", "js", "serde"] }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["Storage", "Window"] }
